# novatex

./: README.md  ROADMAP.md  pyproject.toml  roadmap-dashboard.html
docs/superpowers/plans/: 2026-04-09-phase0-contract-kernel.md
src/novatex/: __init__.py
src/novatex/contracts/: __init__.py  parser.py  schema.py
src/novatex/contracts/templates/: novated_lease_v1.yaml
src/novatex/engine/: __init__.py  machine.py  states.py  transitions.py
src/novatex/ledger/: __init__.py  backend.py  duckdb_ledger.py  events.py  merkle.py  signing.py
src/novatex/models/: __init__.py  fbt.py  lease.py  party.py  running_costs.py  terms.py  vehicle.py
src/novatex/obligations/: __init__.py  definitions.py  tracker.py
src/novatex/reference/: __init__.py  ato_fbt.py  ato_residuals.py
tests/: conftest.py  test_integration.py
tests/contracts/: test_parser.py
tests/engine/: test_machine.py
tests/ledger/: test_duckdb_ledger.py  test_merkle.py  test_signing.py
tests/models/: test_fbt.py  test_lease.py  test_party.py  test_running_costs.py  test_terms.py  test_vehicle.py
tests/obligations/: test_tracker.py
tests/reference/: test_ato_fbt.py  test_ato_residuals.py
