[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novatex"
version = "0.1.0"
description = "Novated Lease Soft Contract Platform"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12,<3",
    "pynacl>=1.5,<2",
    "duckdb>=1.0,<2",
    "pyyaml>=6.0,<7",
    "python-dateutil>=2.9,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10",
    "pytest-cov>=6.0,<7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/novatex"]
